[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NORDic"
version = "0.0.1"
authors = [
  { name="Clémence Réda", email="clemence.reda@inserm.fr" },
]
description = "Network Oriented Repurposing of Drugs (NORDic), comprised of 1. a Boolean network identification pipeline, 2. a method for the prioritization of master regulators."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/clreda/NORDic"
"Bug Tracker" = "https://github.com/clreda/NORDic/issues"
